[workspace]
resolver = "2"
members = ["apps/cli", "apps/desktop/src-tauri", "crates/*"]

[workspace.dependencies]
anyhow = { version = "1.0.86" }
# This includes a currently-unreleased fix that ensures the audio stream is actually
# stopped and released on drop on macOS
cpal = { git = "https://github.com/RustAudio/cpal", rev = "f43d36e55494993bbbde3299af0c53e5cdf4d4cf" }
ffmpeg = { package = "ffmpeg-next", git = "https://github.com/CapSoftware/rust-ffmpeg", rev = "29433c248bcd" }
ffmpeg-sys-next = "7.1.0"
tokio = { version = "1.39.3", features = [
	"macros",
	"process",
	"fs",
	"sync",
	"rt",
	"rt-multi-thread",
	"time",
] }
tauri = { version = "2.2.5", features = ["specta"] }
specta = { version = "=2.0.0-rc.20", features = [
	"derive",
	"serde_json",
	"uuid",
] }

scap = { git = "https://github.com/CapSoftware/scap", rev = "58d4410bf52f" }
nokhwa = { git = "https://github.com/CapSoftware/nokhwa", rev = "e309b938ccd6", features = [
	"input-native",
	"serialize",
] }
nokhwa-bindings-macos = { git = "https://github.com/CapSoftware/nokhwa", rev = "e309b938ccd6" }
wgpu = "22.1.0"
flume = "0.11.0"
thiserror = "1.0"
sentry = { version = "0.34.0", features = [
	"anyhow",
	"backtrace",
	"debug-images",
] }

cidre = { git = "https://github.com/yury/cidre", rev = "ef04aaabe14ffbbce4a330973a74b6d797d073ff" }

windows = "0.58.0"
windows-sys = "0.59.0"
windows-capture = "=1.3.6"
