[package]
name = "cap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
cap-utils = { path = "../../crates/utils" }
cap-project = { path = "../../crates/project" }
cap-rendering = { path = "../../crates/rendering" }
cap-editor = { path = "../../crates/editor" }
cap-media = { path = "../../crates/media" }
cap-flags = { path = "../../crates/flags" }
cap-recording = { path = "../../crates/recording" }
cap-export = { path = "../../crates/export" }
cap-camera = { path = "../../crates/camera" }
scap-targets = { path = "../../crates/scap-targets" }
serde = { workspace = true }
serde_json = "1.0.144"
tokio.workspace = true
uuid = { version = "1.18.1", features = ["v4"] }
ffmpeg = { workspace = true }
tracing.workspace = true
tracing-subscriber = "0.3.20"
flume.workspace = true

[lints]
workspace = true
