[package]
name = "cap-multi-recorder"
version = "0.1.0"
edition = "2024"

 [dependencies]
  cap-recording = { path = "../../crates/recording" }
  cap-media-info = { path = "../../crates/media-info" }
  cap-timestamp = { path = "../../crates/timestamp" }
  scap-targets = { path = "../../crates/scap-targets" }
  clap = { version = "4.0", features = ["derive"] }
  json5 = "0.4"
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  anyhow = "1.0"
  tokio = { version = "1.0", features = ["full"] }
  flume = { workspace = true }
  ffmpeg = { workspace = true }
  kameo = { workspace = true }
  futures = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cap-enc-avfoundation = { path = "../../crates/enc-avfoundation" }
scap-screencapturekit = { path = "../../crates/scap-screencapturekit" }
cidre = { workspace = true, default-features = false }

[target.'cfg(windows)'.dependencies]
scap-direct3d = { path = "../../crates/scap-direct3d" }
windows = { version = "0.60", features = ["Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi"] }

[lints]
workspace = true
