[package]
name = "cap-audio"
version = "0.1.0"
edition = "2024"


[dependencies]
ffmpeg = { workspace = true }
cpal = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
