[package]
name = "cap-audio"
version = "0.1.0"
edition = "2024"


[dependencies]
ffmpeg = { workspace = true }
cpal = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
