[package]
name = "cap-camera-directshow"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tracing.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows-core = { workspace = true }
windows = { workspace = true, features = [
	"Win32_System_Com",
	"Win32_Media_MediaFoundation",
	"Win32_Media_DirectShow",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Ole",
	"Win32_System_Variant",
	"Win32_Media_KernelStreaming",
] }

[lints]
workspace = true

[dev-dependencies]
inquire = "0.7.5"
tracing.workspace = true
tracing-subscriber = "0.3.19"
