[package]
name = "cap-camera-effects"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
wgpu.workspace = true
tracing.workspace = true
bytemuck = { version = "1.7", features = ["derive"] }
ndarray = "0.16"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["directml"] }
