[package]
name = "cap-camera-mediafoundation"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os= "windows")'.dependencies]
windows-core = { version = "0.60" }
windows = { version = "0.60", features = [
	"Win32_Media_MediaFoundation",
	"Win32_Media_DirectShow",
	"Win32_System_Com",
] }
tracing.workspace = true
inquire = "0.7.5"

[lints]
workspace = true
