[package]
name = "cap-camera"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
specta = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }
objc2-av-foundation = { version = "0.3.1", features = ["objc2-core-media"] }
cap-camera-avfoundation = { path = "../camera-avfoundation" }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
windows-core = { workspace = true }
cap-camera-windows = { path = "../camera-windows" }

[dev-dependencies]
inquire = "0.8.0"

[lints]
workspace = true
