[package]
name = "cap-muxer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cap-muxer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
cap-muxer-protocol = { path = "../cap-muxer-protocol" }
ffmpeg = { workspace = true }
libc = "0.2"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
