[package]
name = "cap-cursor-capture"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
scap-targets = { path = "../scap-targets" }

device_query = "4.0.1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"
