[package]
name = "cap-cursor-info"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
specta = { workspace = true, features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.1"
objc2 = "0.6.1"

[target.'cfg(target_os= "windows")'.dependencies]
windows = { workspace = true, features = [
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
