[package]
name = "cap-d3d-adapter"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
tracing = { workspace = true }
windows = { workspace = true, features = [
	"Win32_Foundation",
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D11",
	"Win32_Graphics_Dxgi",
	"Win32_Graphics_Dxgi_Common",
] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
