[package]
name = "cap-displays"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
specta.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"
core-foundation = "0.10.0"
foreign-types = "0.5.0"
cidre = { workspace = true }

[target.'cfg(target_os= "windows")'.dependencies]
windows = { workspace = true, features = [
	"Win32_Foundation",
	"Win32_System",
	"Win32_System_Threading",
	"Win32_System_Registry",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Graphics_Gdi",
	"Win32_Storage_FileSystem",
] }
windows-sys = { workspace = true }
