[package]
name = "cap-displays"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
specta.workspace = true
image = "0.24"
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true, default-features = false, features = ["sc"] }
core-graphics = "0.24.0"
core-foundation = "0.10.0"
cocoa = "0.26.0"
objc = "0.2.7"

[target.'cfg(target_os= "windows")'.dependencies]
windows = { workspace = true, features = [
	"Win32_Foundation",
	"Win32_System",
	"Win32_System_Threading",
	"Win32_System_Registry",
	"Win32_System_Com",
	"Win32_System_Wmi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Shell",
	"Win32_UI_HiDpi",
	"Win32_Graphics_Dwm",
	"Win32_Graphics_Gdi",
	"Win32_Storage_FileSystem",
	"Win32_Devices_Display",
	"Graphics_Capture",
	"Win32_System_WinRT_Graphics_Capture",
] }
windows-sys = { workspace = true }
