[package]
name = "cap-editor"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
cap-media = { path = "../media" }
cap-project = { path = "../project" }
cap-rendering = { path = "../rendering" }
cap-audio = { path = "../audio" }
cap-media-info = { path = "../media-info" }

tokio = { workspace = true, features = ["macros", "process", "fs"] }
cpal.workspace = true
axum = { version = "0.8.4", features = ["ws"] }
ffmpeg.workspace = true
specta.workspace = true
serde = { workspace = true }
sentry.workspace = true
futures = { workspace = true }
tracing.workspace = true
flume.workspace = true
tokio-util = "0.7.16"
ringbuf = "0.4.8"
