[package]
name = "cap-enc-avfoundation"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-media-info = { path = "../media-info" }
cap-ffmpeg-utils = { path = "../ffmpeg-utils" }

ffmpeg.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }

[lints]
workspace = true
