[package]
name = "cap-enc-avfoundation"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-media-info = { path = "../media-info" }

ffmpeg.workspace = true
thiserror.workspace = true
tracing.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }

[lints]
workspace = true
