[package]
name = "cap-enc-ffmpeg"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-media-info = { path = "../media-info" }

ffmpeg.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
