[package]
name = "cap-enc-ffmpeg"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-media-info = { path = "../media-info" }

ffmpeg.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tracing.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
cap-frame-converter = { path = "../frame-converter" }

[lints]
workspace = true
