[package]
name = "cap-export"
version = "0.1.0"
edition = "2021"

[dependencies]
cap-utils = { path = "../utils" }
cap-project = { path = "../project" }
cap-rendering = { path = "../rendering" }
cap-editor = { path = "../editor" }
cap-media = { path = "../media" }
cap-flags = { path = "../flags" }

tokio.workspace = true
tempfile = "3.12.0"
image = "0.25.2"
gifski = "1.12.2"
imgref = "1.9.4"
rgb = "0.8.36"
mp4 = "0.14.0"
rayon = "1.10.0"
thiserror.workspace = true
futures = "0.3.31"
# tauri = { workspace = true }
ffmpeg = { workspace = true }
