[package]
name = "cap-export"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-utils = { path = "../utils" }
cap-project = { path = "../project" }
cap-rendering = { path = "../rendering" }
cap-editor = { path = "../editor" }
cap-media = { path = "../media" }
cap-flags = { path = "../flags" }
cap-media-encoders = { path = "../media-encoders" }
cap-media-info = { path = "../media-info" }

tokio.workspace = true
tempfile = "3.12.0"
image = "0.25.2"
mp4 = "0.14.0"
thiserror.workspace = true
futures = "0.3.31"
ffmpeg.workspace = true
serde.workspace = true
specta.workspace = true
serde_json = "1.0.140"
tracing.workspace = true

[dev-dependencies]
clap = { version = "4.5.41", features = ["derive"] }
inquire = "0.7.5"
tokio.workspace = true

[lints]
workspace = true
