[package]
name = "cap-export"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-utils = { path = "../utils" }
cap-project = { path = "../project" }
cap-rendering = { path = "../rendering" }
cap-editor = { path = "../editor" }
cap-media = { path = "../media" }
cap-flags = { path = "../flags" }
cap-enc-ffmpeg = { path = "../enc-ffmpeg" }
cap-enc-gif = { path = "../enc-gif" }
cap-media-info = { path = "../media-info" }

tokio.workspace = true
tempfile = "3.12.0"
image = "0.25.2"
mp4 = "0.14.0"
thiserror.workspace = true
futures = { workspace = true }
ffmpeg = { workspace = true }
serde = { workspace = true }
specta.workspace = true
serde_json = "1.0.140"
tracing.workspace = true
gifski = "1.32"
imgref = "1.10"
rgb = "0.8"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
clap = { version = "4.5.41", features = ["derive"] }
chrono = "0.4"
directories = "6.0.0"
inquire = "0.7.5"
tokio.workspace = true
serde_json.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints]
workspace = true
