[package]
name = "cap-frame-converter"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
cap-media-info = { path = "../media-info" }

ffmpeg.workspace = true
thiserror.workspace = true
tracing.workspace = true
flume.workspace = true
crossbeam-channel = "0.5"
parking_lot = "0.12"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
] }

