[package]
name = "cap-media-encoders"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-project = { path = "../project" }
cap-flags = { path = "../flags" }
cap-audio = { path = "../audio" }
cap-fail = { path = "../fail" }
cap-media-info = { path = "../media-info" }

ffmpeg.workspace = true
thiserror.workspace = true
tracing.workspace = true
gifski = "1.32"
imgref = "1.10"
rgb = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }

[lints]
workspace = true
